--- a/experiments/reconstructions/exp3.6.left_right.ipynb
+++ b/experiments/reconstructions/exp3.6.left_right.ipynb
@@ -103,7 +103,7 @@
     "# Generate Environments on which to learn\n",
     "high_res_delta = 1e-0  # For generating the dataset and later sample\n",
     "baseline_rates = {\"lam\": 1 / 10, \"mu\": 4 / 10}\n",
-    "epochs = 1000\n",
+    "epochs = 2000\n",
     "length_of_episode = 15\n",
     "step_path_length = 1\n",
     "sampling_budget = 16\n",
@@ -163,13 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df046ba4971d48f292769a107b5dea59",
+       "model_id": "c91bcd1b93e2403d9eace405bba1aca9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fbf82d58cfe4f95a59fb9f5419afee3",
+       "model_id": "8af01fb71e9349418a6069678be2734d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,6 +193,19 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 44\u001b[0m\n\u001b[1;32m     41\u001b[0m init_states \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, num_states, (batch_size,\u001b[38;5;241m1\u001b[39m))\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     43\u001b[0m \u001b[38;5;66;03m# Initial State\u001b[39;00m\n\u001b[0;32m---> 44\u001b[0m sampled_tape, fullres_tape \u001b[38;5;241m=\u001b[39m \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_decimation_factor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minit_states\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     45\u001b[0m states \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     46\u001b[0m     torch\u001b[38;5;241m.\u001b[39mcat(\n\u001b[1;32m     47\u001b[0m         (\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     52\u001b[0m     )\n\u001b[1;32m     53\u001b[0m ]\n\u001b[1;32m     54\u001b[0m \u001b[38;5;66;03m# TODO: randomly select current_decimation_factor within some bounds\u001b[39;00m\n",
+      "File \u001b[0;32m~/Research/SamplingReconstruction/experiments/reconstructions/../../samprecon/environments/Environments.py:335\u001b[0m, in \u001b[0;36mMarkovianUniformCumulativeEnvironment.reset\u001b[0;34m(self, dec_rates, init_states)\u001b[0m\n\u001b[1;32m    328\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbatch_size \u001b[38;5;241m=\u001b[39m dec_rates\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    330\u001b[0m \u001b[38;5;66;03m# initial_tape = (\u001b[39;00m\n\u001b[1;32m    331\u001b[0m \u001b[38;5;66;03m#     torch.Tensor(\u001b[39;00m\n\u001b[1;32m    332\u001b[0m \u001b[38;5;66;03m#         self.state_generator.sample(default_dec_rates, self.sampling_budget)\u001b[39;00m\n\u001b[1;32m    333\u001b[0m \u001b[38;5;66;03m#     ).to(torch.float)[:: int(default_dec_rates)]\u001b[39;00m\n\u001b[1;32m    334\u001b[0m \u001b[38;5;66;03m# )[: self.sampling_budget]\u001b[39;00m\n\u001b[0;32m--> 335\u001b[0m sampled_tape, fullres_tape \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstate_generator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    336\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdec_rates\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msampling_budget\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minit_states\u001b[49m\n\u001b[1;32m    337\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    339\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m sampled_tape, fullres_tape\n",
+      "File \u001b[0;32m~/Research/SamplingReconstruction/experiments/reconstructions/../../sp_sims/simulators/stochasticprocesses.py:183\u001b[0m, in \u001b[0;36mBDStates.sample\u001b[0;34m(self, decimation_rates, sampling_budget, init_states)\u001b[0m\n\u001b[1;32m    180\u001b[0m tape_head \u001b[38;5;241m=\u001b[39m init_states\u001b[38;5;241m.\u001b[39mclone()\u001b[38;5;241m.\u001b[39mto(init_states\u001b[38;5;241m.\u001b[39mdevice)\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, length):\n\u001b[0;32m--> 183\u001b[0m     selection_probabilities \u001b[38;5;241m=\u001b[39m \u001b[43mprobs_tensor\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtape_head\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    184\u001b[0m     next_states \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmultinomial(selection_probabilities, \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    186\u001b[0m     \u001b[38;5;66;03m# Determine which ones to include\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -214,6 +227,7 @@
     "    lr=policy_learning_rate,\n",
     ")\n",
     "optimizer_value_est = torch.optim.Adam(valueEst.parameters(), lr=value_learning_rate)\n",
+    "t_decsteps = torch.LongTensor(decimation_steps).to(device)\n",
     "# val_opt = torch.optim.Adam(valueEst.parameters(), lr=1e-2)\n",
     "\n",
     "# Scheduler with warmpu\n",
@@ -263,7 +277,7 @@
     "        \n",
     "        # pick from decimation_steps with indices specified in sampled_action\n",
     "        #current_decimation_factor += \n",
-    "        selected_actions = torch.LongTensor(decimation_steps)[sampled_action].view(-1,1).to(device)\n",
+    "        selected_actions = t_decsteps[sampled_action].view(-1,1).to(device)\n",
     "        #current_decimation_factor = torch.clamp(current_decimation_factor + selected_actions, 1, int(max_decimation))\n",
     "        \n",
     "        # CHECK: Do we need this?\n",
