--- a/experiments/reconstructions/exp3.5_rlsampling_cumulative copy.ipynb
+++ b/experiments/reconstructions/exp3.5_rlsampling_cumulative copy.ipynb
@@ -221,7 +221,7 @@
     "        disadvantage = r - val_est.item()\n",
     "        policy_regrets.append(-lp * disadvantage)  # TODO: this might require a negative sign\n",
     "        value_loss.append(F.mse_loss(val_est, torch.Tensor([r.item()]).view(1,-1)))\n",
-    "    # We update the whole thingko\n",
+    "    # We update the whole thing\n",
     "    policy_loss = torch.stack(policy_regrets).sum()\n",
     "    value_loss = torch.stack(value_loss).mean()\n",
     "\n",
