--- a/experiments/reconstructions/exp3.8_Viterbi_EqSamp_Branching.ipynb
+++ b/experiments/reconstructions/exp3.8_Viterbi_EqSamp_Branching.ipynb
@@ -76,6 +76,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_res_delta = 1e-0  # For generating the dataset and later sample\n",
+    "baseline_rates = {\"lam\": 1 / 10, \"mu\": 4 / 10}\n",
+    "epochs = 400\n",
+    "length_of_episode = 32\n",
+    "sampling_budget = 1000\n",
+    "epochs_b4_policy_update = 1\n",
+    "value_learning_rate = 1e-2\n",
+    "policy_learning_rate = 1e-2\n",
+    "batch_size = 8\n",
+    "num_states = 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a Q out of Random P and ensure that it is a valid Q\n",
+    "while True:\n",
+    "    P = np.random.rand(num_states,num_states) \n",
+    "    norm_fact = np.sum(P,axis=1)\n",
+    "    P /= norm_fact[:,None]\n",
+    "    Q = power_series_log(P) / high_res_delta\n",
+    "    # Verify Q\n",
+    "    if np.all(np.linalg.eigvals(Q) < 0):\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -99,15 +133,6 @@
    ],
    "source": [
     "# Generate Environments on which to learn\n",
-    "high_res_delta = 1e-0  # For generating the dataset and later sample\n",
-    "baseline_rates = {\"lam\": 1 / 10, \"mu\": 4 / 10}\n",
-    "epochs = 400\n",
-    "length_of_episode = 32\n",
-    "sampling_budget = 1000\n",
-    "epochs_b4_policy_update = 1\n",
-    "value_learning_rate = 1e-2\n",
-    "policy_learning_rate = 1e-2\n",
-    "batch_size = 8\n",
     "#P_trivial_cycle = torch.Tensor([\n",
     "#    [0.8,   0,      0,      0.2,    0,      0,      0],\n",
     "#    [0.3,   0.7,    0,      0,      0,      0,      0],\n",
@@ -127,6 +152,18 @@
     "    [1e-2,     1e-2,      1e-2,      0.1,       1e-2,      1e-2,      0.85]\n",
     "])\n",
     "Q = power_series_log(P_trivial_cycle.unsqueeze(0), 100).squeeze() / high_res_delta\n",
+    "# COnditions\n",
+    "det_p = np.linalg.det(P_trivial_cycle.numpy())\n",
+    "op_norm = np.linalg.norm(P_trivial_cycle.numpy() - np.eye,ord=np.inf)\n",
+    "eigvals = np.linalg.eigvals(P_trivial_cycle.numpy())\n",
+    "\n",
+    "print(\"Information is below:\")\n",
+    "print(f\"Det(P) = {det_p}, compare {np.exp(-np.pi)}\")\n",
+    "print(f\"Op Norm(P) = {op_norm}\")\n",
+    "print(f\"Eigenvalues(P) = {eigvals}\")\n",
+    "\n",
+    "\n",
+    "\n",
     "print(\"This is the Generator Matrix behind simulations. Pretty printed it looks like:\")\n",
     "for row in Q:\n",
     "    for el in row:\n",
@@ -134,7 +171,6 @@
     "    print()\n",
     "print(f\"Q Sum {torch.sum(Q,dim=-1)}\")\n",
     "#used_path_length = 64  # So that we can let the process reach stationarity and take samples from stationary distribution\n",
-    "num_states = 12\n",
     "true_q = torch.from_numpy(get_q_mat(baseline_rates,num_states)).to(torch.float32).to(device)\n",
     "avg_span = np.mean(1 / np.array(list(baseline_rates.values())))\n",
     "max_decimation = (\n",
